# schema-whisper

./: README.md  pyproject.toml
examples/: events.jsonl
src/schema_whisper/: __init__.py  __main__.py  cli.py  core.py
tests/: test_schema_whisper.py
